--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -19,12 +19,24 @@
         padding: 20px 30px;
         color: $white;
         .nav__links{
+            z-index: 4;
             .fas{
-                color: $white;
+                color: white;
+                margin: 0 20px;
             }
             .nav__links--link{
                 color: $white;
                 margin: 0 20px;
+                padding-bottom: 5px;
+                border-bottom: 2px solid rgba($color: #fefefe, $alpha: 0);
+                transition: all .5s ease-in-out;
+                &:hover{
+                    border-bottom: 2px solid white;
+
+                }
+                // &.nav__links--link-underline{
+                
+                // }
 
             }
             .contact{
