--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -122,14 +122,59 @@
         }
     }
 }
+.our-team{
+    @include flexContainer(row, center, center);
+    width: 100%;
+    height: 800px;
+    .our-team__container{
+        @include flexContainer(row, flex-start, flex-start);
+        flex-wrap: wrap;
+        max-width: 1200px;
+        .our-team__container--left{
+            width: 50%;
+        }
+        .our-team__container--right{
+            width: 50%;
+        }
+
+        img{
+            width: 192px;
+            height: 280px;
+            padding: 7px;
+            object-fit: cover;
+            object-position: center;
+        }
+        .our-team__container--pic-big{
+            width: 388px;
+            height: 400px;
+        }
+        .our-team__container--pic-tall{
+            height: 400px;
+        }
+    }
+}
+.contact{
+    @include flexContainer(column, center, center);
+    padding: 50px 0;
+    background: rgba($color: #6B7DA7, $alpha: .1);
+    span, p{
+        opacity: .5;
+        text-align: center;
+    }
+    .contact__header{
+        color: #232a39;
+        padding: 30px 0 20px;
+    }
+}
 
 .footer{
     @include flexContainer(column, center, center);
-    background: #2C51A0;
+    background: #161A22;
     color: $white;
     padding: 50px;
     width: 100%;
-    .footer__top{
+    .footer__top{   
+        position: relative;
         width: 100%;
         @include flexContainer(row, space-between, flex-start);
         padding: 50px 0;
@@ -148,6 +193,35 @@
                 font-weight: 300;
                 padding-bottom: 5px;
             }
+            .footer__top--section--social{
+                .fab{
+                    color: $white;
+                    padding-right: 20px;
+                    font-size: 1.3rem;
+                    cursor: pointer;
+
+                }
+            }
+        }
+    }
+    .footer__middle{
+        width: 100%;
+        text-align: center;
+        position: relative;
+        padding: 30px 0;
+        border-bottom: 1px solid rgba($color: #fefefe, $alpha: .3);
+        p{
+            text-align: center;
+            opacity: .8;
+        }
+    }
+    .footer__bottom{
+        @include flexContainer(row, space-between, flex-start);
+        width: 100%;
+        padding: 30px 0;
+        p{
+            font-size: 0.8rem;
+            opacity: .5
         }
     }
 }
