--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -35,7 +35,7 @@
 
                 }
             }
-            .contact{
+            .contact-btn{
                 background: rgba($color: #fefefe, $alpha: 0.4);
                 padding: 10px 15px;
                 border-radius: 10px;
