--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -94,7 +94,8 @@
 .mission{
     @include flexContainer(column, center, center);
     @include bgCover;
-    margin-bottom: 100px;
+    padding: 100px 0;
+    background: rgba(157, 156, 156, .1);
     .mission__title{
         text-align: center;
         font-weight: 600;
@@ -125,7 +126,7 @@
 .our-team{
     @include flexContainer(column, center, center);
     width: 100%;
-    height: 800px;
+    padding: 50px 0;
     h2{
         font-weight: 600;
         text-transform: capitalize;
