--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -107,7 +107,7 @@
         margin-bottom: 30px;
     }
     .mission__buttons{
-        margin: 30px 20px;
+        margin: 10px 20px;
         .mission__buttons--btn{
             margin: 0px 5px;
             padding: 10px 15px;
@@ -157,6 +157,68 @@
         .our-team__container--pic-tall{
             height: 400px;
         }
+    }
+}
+.careers{
+    width: 100%;
+    height: 400px;
+    padding: 40px;
+    display: flex;
+    .careers__left{
+        width: 50%;
+        .careers__employee-container{
+            width: 493px;
+            height: 192px;
+            display: flex;
+            align-items: center;
+            border: 1px solid rgba(128, 128, 128, 0.495);
+            border-radius: 5px;
+            -webkit-box-shadow: -6px 8px 19px 1px rgba(0,0,0,0.76); 
+            box-shadow: -6px 8px 19px 1px rgba(0,0,0,0.76);
+            .careers__employee{
+                padding: 20px;
+                height: 100%;
+                border-radius: 28px;
+            }
+            .careers__employee-details--name{
+                font-weight: 600;
+                padding-bottom: 10px;
+            }
+            .careers__employee-details--title{
+                padding-bottom: 5px;
+                opacity: .5;
+            }
+            .careers__employee-details--location{
+                font-weight: 600;
+                padding-bottom: 5px;
+                font-size: 0.9rem;
+            }
+            .careers__employee-details--review{
+                padding-bottom: 5px;
+                font-size: 0.9rem;
+                opacity: .5;
+                .fas{
+                    color: red;
+                }
+            }
+            .careers__employee-details--bubbles{
+                padding-top: 5px;
+                display: flex;
+                .bubbles--green{
+                    width: 140px;
+                }
+                .bubbles--red{
+                    width: 200px;
+                    padding-left: 10px;
+                }
+            }
+
+        }
+    }
+    .careers__right{
+        width: 50%;
+
+
     }
 }
 .contact{
@@ -216,7 +278,6 @@
         }
     }
 }
-
 .footer{
     @include flexContainer(column, center, center);
     background: #161A22;
@@ -275,4 +336,3 @@
         }
     }
 }
-
