--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -162,10 +162,11 @@
 .careers{
     width: 100%;
     height: 400px;
-    padding: 40px;
+    padding: 50px;
     display: flex;
     .careers__left{
-        width: 50%;
+        @include flexContainer(column, center, center)
+        width: 60%;
         .careers__employee-container{
             width: 493px;
             height: 192px;
@@ -175,6 +176,9 @@
             border-radius: 5px;
             -webkit-box-shadow: -6px 8px 19px 1px rgba(0,0,0,0.76); 
             box-shadow: -6px 8px 19px 1px rgba(0,0,0,0.76);
+            &.allan{
+                z-index: 20;
+            }
             .careers__employee{
                 padding: 20px;
                 height: 100%;
@@ -216,8 +220,21 @@
         }
     }
     .careers__right{
-        width: 50%;
-
+        width: 40%;
+        .careers__right--header{
+            padding-bottom: 30px;
+        }
+        .careers__right--details{
+            padding-bottom: 50px;
+        }
+        .careers__right--apply-btn{
+            padding: 15px 20px;
+            background: #161A22;
+            color: $white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
 
     }
 }
