--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -118,3 +118,14 @@
         }
     }
 }
+@media only screen and (max-width: 700px){
+    .footer{
+        .footer__top{
+            padding: 0;
+            flex-direction: column;
+            .footer__top--section{
+                padding: 20px 0;
+            }
+        }
+    }
+}
