--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -126,6 +126,7 @@
         }
     }
     .footer{
+        padding: 10px 40px;
         .footer__top{
             padding: 0;
             flex-direction: column;
