--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -11,6 +11,7 @@
         @include flexContainer(row, space-between, center);
         padding: 20px 30px;
         color: $white;
+        width: 100%;
         .nav__links{
             z-index: 4;
             .fas{
