--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -281,6 +281,7 @@
                 .careers__employee-container{
                     width: 80vw;
                     height: 102px;
+                    max-width: 432px;
                     // width: 270px;
                     // height: 102px;
                     margin: 0 auto;
