--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -151,6 +151,7 @@
                     height: 100%;
                     object-fit: cover;
                     object-position: center;
+                    max-width: 140px;
                     border-radius: 28px;
                     z-index: 0;
                     &.front{
